@@ -680,7 +680,7 @@ if (! $tbl_is_view && ! $db_is_information_schema && 'ARCHIVE' !=  $tbl_type) {
     ?>
 <br />
 <form action="./tbl_indexes.php" method="post"
-    onsubmit="return checkFormElementInRange(this, 'idx_num_fields',
+    onsubmit="return checkFormElementInRange(this, 'added_fields',
         '<?php echo str_replace('\'', '\\\'', __('Column count has to be larger than zero.')); ?>',
         1)">
 <fieldset>
@@ -689,11 +689,7 @@ if (! $tbl_is_view && ! $db_is_information_schema && 'ARCHIVE' !=  $tbl_type) {
     echo sprintf(__('Create an index on &nbsp;%s&nbsp;columns'),
         '<input type="text" size="2" name="added_fields" value="1" />');
     ?>
-    <input type="submit" name="create_index" value="<?php echo __('Go'); ?>"
-        onclick="return checkFormElementInRange(this.form,
-            'idx_num_fields',
-            '<?php echo str_replace('\'', '\\\'', __('Column count has to be larger than zero.')); ?>',
-            1)" />
+    <input type="submit" name="create_index" value="<?php echo __('Go'); ?>" />
 </fieldset>
 </form>
 <br />
